# personal-LLM

./: .env.example  .gitignore  DEMO.md  DOWNLOAD.md  LICENSE  README.md  install.sh  package-lock.json  package.json  persona.desktop  persona.spec  persona_exe.py  pyproject.toml
.github/workflows/: build-macos.yml  build-unified-windows.yml  build-windows.yml  demo-pages.yml  sync-to-persona.yml
big-brain/: Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json
big-brain/client/: index.html  package.json  vite.config.ts
big-brain/client/src/: App.tsx  main.tsx  styles.css
big-brain/server/: package.json
big-brain/server/src/: db.ts  index.ts
big-brain/workflows/seed/: manifest.json
demo/: README.md  index.html
docs/: DUAL_RAG.md  WEBVIEW2_SPIKE.md  brain-python-migration.md
integrations/big-brain/: README.md
persona-app/: DEMO.md  DOWNLOAD.md  README.md  install.sh  persona.spec  persona_exe.py  pyproject.toml
persona-app/.github/workflows/: build-windows.yml
persona-app/demo/: README.md  index.html
persona-app/personas/gallery/: dm-table.yaml
persona-app/personas/packs/: startup-crew.yaml  writer-room.yaml
persona-app/scripts/: setup_bundled_windows.ps1
persona-app/src/persona/: __init__.py  browser.py  crew.py  custom.py  demo.py  dialogs.py  gallery.py  (+9 more)
persona-app/tests/: test_agent.py  test_brain_routes.py  test_instance.py  test_llm.py  test_ollama.py  test_packs.py
persona-app/windows/: README.txt  Run Persona.bat  persona.iss
persona-merge-patches/: 0001-Merge-personal-LLM-assets-into-Persona-monorepo.patch
personas/: example-ledger.yaml
personas/gallery/: content-studio.yaml  fitness-crew.yaml  homeschool-helpers.yaml  indie-hacker.yaml
personas/packs/: study-squad.yaml
scripts/: build-macos.sh  record_demo_video.py  run-brain-api.js  run-persona-dev.js  run-persona.js  setup_bundled_windows.ps1  smoke_launcher.py  start-unified.ps1  sync-to-persona.sh
src/persona/: __init__.py  agent.py  avatars.py  bundled.py  chat_history.py  cli.py  config.py  crew.py  custom.py  launcher.py  llm.py  personas.py  projects.py  providers.py  rag.py  tools.py  user_config.py
src/personal_llm/: __init__.py  agent.py  cli.py  config.py  llm.py  memory.py  models.py  tools.py
tests/: test_agent.py  test_bundled.py  test_bundled_tools.py  test_gallery.py  test_launcher.py  test_templates.py
windows/: Create Desktop Shortcut.bat  README.txt  Run Persona.bat
(+44 files in other folders)
