[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "persona"
version = "0.2.0"
description = "Persona — cartoon AI crew with specialized agents for teams and individuals"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "fastapi>=0.111",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "rich>=13.0",
    "typer>=0.12",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
persona = "persona.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/persona"]

[tool.hatch.build.targets.wheel.force-include]
"src/persona/web/static" = "persona/web/static"

[tool.ruff]
line-length = 100
target-version = "py311"
